-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs20, 7
-
Component/s: hotspot
-
b03
-
generic
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2207263 | 7 | Y. Ramakrishna | P2 | Closed | Fixed | b132 |
Saw this assertion failure in the 2009-12-18 nightly testing.
[2009-12-19T11:09:12.05] # Internal Error (/tmp/jprt/P1/B/005121.iv159533/source/src/share/vm/gc_implementation/concurrentMarkSweep/concurrentMarkSweepGeneration.cpp:6238), pid=13350, tid=51
[2009-12-19T11:09:12.05] # Error: assert(_markBitMap.isMarked(addr + 1),"Missing Printezis bit?")
[2009-12-19T11:09:12.05] #
[2009-12-19T11:09:12.05] # JRE version: 7.0-b77
[2009-12-19T11:09:12.05] # Java VM: OpenJDK 64-Bit Server VM (17.0-b05-2009-12-17-005121.iv159533.hotspot-gc-update-sched2-fastdebug mixed mode solaris-sparc compressed oops)
[2009-12-19T11:09:12.05] # An error report file with more information is saved as:
[2009-12-19T11:09:12.05] # /export/local/27915.JDK7.NIGHTLY.VM+solaris-sparcv9_server_mixed_vm.parallel_class_loading.testlist/results/ResultDir/anonymous-complex_copy_1/hs_err_pid13350.log
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/anonymous-simple
----------------- lwp# 3 / thread# 3 --------------------
ce6ca9b5 _lwp_kill (3, 6) + 15
ce671e03 raise (6) + 1f
ce651c4d abort (ce32f2e8, ce299440, 0, 50, 0, 2) + cd
cd7f41f2 __1cCosFabort6Fb_v_ (1, ce203082, 1, ce349680) + 112
cdcfbc97 __1cHVMErrorOreport_and_die6M_v_ (cbcbe960, cdf1138d, cbcbea38, ccac022c) + a7f
ccac0251 __1cPreport_vm_error6Fpkci11_v_ (cdf113d2, 185e, cdf113a4, cdf1138d) + 5ad
cca3a4d4 __1cMCMSCollectorbCblock_size_if_printezis_bits6kMpnIHeapWord__I_ (8095a40, c4acf3d8, c4acf280, c4800168) + 470
cc966473 __1cYCompactibleFreeListSpaceTblock_size_no_stall6kMpnIHeapWord_pknMCMSCollector__I_ (808da90, c4acf3d8, 8095a40, cd74c2c6) + 2b7
cca6332e __1cWMarkDeadObjectsClosureGdo_blk6MpnIHeapWord__I_ (cbcbeb70, c4acf3d8, cbcbeb48, cca67ca8) + 1a
cc964735 __1cYCompactibleFreeListSpaceLblk_iterate6MpnKBlkClosure__v_ (808da90, cbcbeb70, cbcbec88, cca36bd2) + 3d
cca36e10 __1cMCMSCollectorFsweep6Mb_v_ (8095a40, 1, 64, cca19157) + 25c
cca196ad __1cMCMSCollectorVcollect_in_background6Mb_v_ (8095a40, 0, 0, 0) + 5cd
cca675e4 __1cZConcurrentMarkSweepThreadDrun6M_v_ (8096400, ce355f20, 0, cd7f0880) + 480
cd7f0f20 java_start (8096400) + 708
ce6c7055 _thr_setup (cbf50a00) + 4e
ce6c7340 _lwp_start (cbf50a00, 0, 0, cbcbeff8, ce6c7340, cbf50a00)
Details can be found at or near:-
http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-08-09/Main_Baseline/vm/solaris-i586/server/mixed/solaris-i586_vm_server_mixed_vm.parallel_class_loading.testlist/ResultDir/anonymous-simple
From:-
http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-12-14/Main_Baseline/new_unknown_failures.html
runtime/ParallelClassLoading/stress-redefine/holdLock/reflect/anonymous-simple
runtime/ParallelClassLoading/stress-redefine/holdLock/reflect/anonymous-complex
runtime/ParallelClassLoading/stress-redefine/holdLock/loadClass/tree
runtime/ParallelClassLoading/stress-redefine/holdLock/loadClass/dynamic-init/init-simple
runtime/ParallelClassLoading/stress-redefine/holdLock/loadClass/dynamic-init/anonymous-complex
runtime/ParallelClassLoading/stress-redefine/holdLock/loadClass/dynamic-init/abstract
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/tree
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/init-simple
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/init-complex
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/independent
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/dynamic-init/init-simple
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/dynamic-init/init-complex
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/dynamic-init/abstract
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/anonymous-simple
runtime/ParallelClassLoading/stress-redefine/freeLock/loadClass/init-complex
runtime/ParallelClassLoading/stress-redefine/freeLock/loadClass/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/stress-redefine/freeLock/loadClass/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/URLClassLoader/reflect/redefine/independent
runtime/ParallelClassLoading/std_CLs/URLClassLoader/reflect/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/URLClassLoader/loadClass/redefine/tree
runtime/ParallelClassLoading/std_CLs/URLClassLoader/loadClass/redefine/independent
runtime/ParallelClassLoading/std_CLs/URLClassLoader/loadClass/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/URLClassLoader/loadClass/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/URLClassLoader/loadClass/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/tree
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/independent
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/dynamic-init/anonymous-complex
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/reflect/redefine/dynamic-init/inner-complex
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/reflect/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/reflect/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/reflect/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/loadClass/redefine/inner-complex
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/loadClass/redefine/independent
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/loadClass/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/loadClass/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/forName/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/forName/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/forName/redefine/anonymous-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/tree
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/independent
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/anonymous-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/loadClass/redefine/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/loadClass/redefine/independent
runtime/ParallelClassLoading/std_CLs/PrivateMLet/loadClass/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/loadClass/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/PrivateMLet/loadClass/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/PrivateMLet/forName/redefine/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/forName/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/forName/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/PrivateMLet/forName/redefine/dynamic-init/anonymous-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/forName/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/MLet/reflect/redefine/independent
runtime/ParallelClassLoading/std_CLs/MLet/reflect/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/MLet/reflect/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/MLet/reflect/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/MLet/loadClass/redefine/init-complex
runtime/ParallelClassLoading/std_CLs/MLet/loadClass/redefine/independent
runtime/ParallelClassLoading/std_CLs/MLet/loadClass/redefine/dynamic-init/anonymous-complex
runtime/ParallelClassLoading/std_CLs/MLet/loadClass/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/MLet/loadClass/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/MLet/forName/redefine/tree
runtime/ParallelClassLoading/std_CLs/MLet/forName/redefine/init-complex
runtime/ParallelClassLoading/std_CLs/MLet/forName/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/MLet/forName/redefine/anonymous-complex
See:-
http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-12-21/Main_Baseline/vm/linux-i586/server/mixed/linux-i586_vm_server_mixed_vm.parallel_class_loading.testlist/analysis.html
[2009-12-19T11:09:12.05] # Internal Error (/tmp/jprt/P1/B/005121.iv159533/source/src/share/vm/gc_implementation/concurrentMarkSweep/concurrentMarkSweepGeneration.cpp:6238), pid=13350, tid=51
[2009-12-19T11:09:12.05] # Error: assert(_markBitMap.isMarked(addr + 1),"Missing Printezis bit?")
[2009-12-19T11:09:12.05] #
[2009-12-19T11:09:12.05] # JRE version: 7.0-b77
[2009-12-19T11:09:12.05] # Java VM: OpenJDK 64-Bit Server VM (17.0-b05-2009-12-17-005121.iv159533.hotspot-gc-update-sched2-fastdebug mixed mode solaris-sparc compressed oops)
[2009-12-19T11:09:12.05] # An error report file with more information is saved as:
[2009-12-19T11:09:12.05] # /export/local/27915.JDK7.NIGHTLY.VM+solaris-sparcv9_server_mixed_vm.parallel_class_loading.testlist/results/ResultDir/anonymous-complex_copy_1/hs_err_pid13350.log
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/anonymous-simple
----------------- lwp# 3 / thread# 3 --------------------
ce6ca9b5 _lwp_kill (3, 6) + 15
ce671e03 raise (6) + 1f
ce651c4d abort (ce32f2e8, ce299440, 0, 50, 0, 2) + cd
cd7f41f2 __1cCosFabort6Fb_v_ (1, ce203082, 1, ce349680) + 112
cdcfbc97 __1cHVMErrorOreport_and_die6M_v_ (cbcbe960, cdf1138d, cbcbea38, ccac022c) + a7f
ccac0251 __1cPreport_vm_error6Fpkci11_v_ (cdf113d2, 185e, cdf113a4, cdf1138d) + 5ad
cca3a4d4 __1cMCMSCollectorbCblock_size_if_printezis_bits6kMpnIHeapWord__I_ (8095a40, c4acf3d8, c4acf280, c4800168) + 470
cc966473 __1cYCompactibleFreeListSpaceTblock_size_no_stall6kMpnIHeapWord_pknMCMSCollector__I_ (808da90, c4acf3d8, 8095a40, cd74c2c6) + 2b7
cca6332e __1cWMarkDeadObjectsClosureGdo_blk6MpnIHeapWord__I_ (cbcbeb70, c4acf3d8, cbcbeb48, cca67ca8) + 1a
cc964735 __1cYCompactibleFreeListSpaceLblk_iterate6MpnKBlkClosure__v_ (808da90, cbcbeb70, cbcbec88, cca36bd2) + 3d
cca36e10 __1cMCMSCollectorFsweep6Mb_v_ (8095a40, 1, 64, cca19157) + 25c
cca196ad __1cMCMSCollectorVcollect_in_background6Mb_v_ (8095a40, 0, 0, 0) + 5cd
cca675e4 __1cZConcurrentMarkSweepThreadDrun6M_v_ (8096400, ce355f20, 0, cd7f0880) + 480
cd7f0f20 java_start (8096400) + 708
ce6c7055 _thr_setup (cbf50a00) + 4e
ce6c7340 _lwp_start (cbf50a00, 0, 0, cbcbeff8, ce6c7340, cbf50a00)
Details can be found at or near:-
http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-08-09/Main_Baseline/vm/solaris-i586/server/mixed/solaris-i586_vm_server_mixed_vm.parallel_class_loading.testlist/ResultDir/anonymous-simple
From:-
http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-12-14/Main_Baseline/new_unknown_failures.html
runtime/ParallelClassLoading/stress-redefine/holdLock/reflect/anonymous-simple
runtime/ParallelClassLoading/stress-redefine/holdLock/reflect/anonymous-complex
runtime/ParallelClassLoading/stress-redefine/holdLock/loadClass/tree
runtime/ParallelClassLoading/stress-redefine/holdLock/loadClass/dynamic-init/init-simple
runtime/ParallelClassLoading/stress-redefine/holdLock/loadClass/dynamic-init/anonymous-complex
runtime/ParallelClassLoading/stress-redefine/holdLock/loadClass/dynamic-init/abstract
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/tree
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/init-simple
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/init-complex
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/independent
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/dynamic-init/init-simple
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/dynamic-init/init-complex
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/dynamic-init/abstract
runtime/ParallelClassLoading/stress-redefine/holdLock/forName/anonymous-simple
runtime/ParallelClassLoading/stress-redefine/freeLock/loadClass/init-complex
runtime/ParallelClassLoading/stress-redefine/freeLock/loadClass/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/stress-redefine/freeLock/loadClass/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/URLClassLoader/reflect/redefine/independent
runtime/ParallelClassLoading/std_CLs/URLClassLoader/reflect/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/URLClassLoader/loadClass/redefine/tree
runtime/ParallelClassLoading/std_CLs/URLClassLoader/loadClass/redefine/independent
runtime/ParallelClassLoading/std_CLs/URLClassLoader/loadClass/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/URLClassLoader/loadClass/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/URLClassLoader/loadClass/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/tree
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/independent
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/dynamic-init/anonymous-complex
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/URLClassLoader/forName/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/reflect/redefine/dynamic-init/inner-complex
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/reflect/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/reflect/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/reflect/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/loadClass/redefine/inner-complex
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/loadClass/redefine/independent
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/loadClass/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/loadClass/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/forName/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/forName/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/SecureClassLoader/forName/redefine/anonymous-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/tree
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/independent
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/PrivateMLet/reflect/redefine/anonymous-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/loadClass/redefine/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/loadClass/redefine/independent
runtime/ParallelClassLoading/std_CLs/PrivateMLet/loadClass/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/loadClass/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/PrivateMLet/loadClass/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/PrivateMLet/forName/redefine/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/forName/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/forName/redefine/dynamic-init/anonymous-simple
runtime/ParallelClassLoading/std_CLs/PrivateMLet/forName/redefine/dynamic-init/anonymous-complex
runtime/ParallelClassLoading/std_CLs/PrivateMLet/forName/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/MLet/reflect/redefine/independent
runtime/ParallelClassLoading/std_CLs/MLet/reflect/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/MLet/reflect/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/MLet/reflect/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/MLet/loadClass/redefine/init-complex
runtime/ParallelClassLoading/std_CLs/MLet/loadClass/redefine/independent
runtime/ParallelClassLoading/std_CLs/MLet/loadClass/redefine/dynamic-init/anonymous-complex
runtime/ParallelClassLoading/std_CLs/MLet/loadClass/redefine/dynamic-init/abstract
runtime/ParallelClassLoading/std_CLs/MLet/loadClass/redefine/anonymous-simple
runtime/ParallelClassLoading/std_CLs/MLet/forName/redefine/tree
runtime/ParallelClassLoading/std_CLs/MLet/forName/redefine/init-complex
runtime/ParallelClassLoading/std_CLs/MLet/forName/redefine/dynamic-init/init-complex
runtime/ParallelClassLoading/std_CLs/MLet/forName/redefine/anonymous-complex
See:-
http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-12-21/Main_Baseline/vm/linux-i586/server/mixed/linux-i586_vm_server_mixed_vm.parallel_class_loading.testlist/analysis.html
- backported by
-
JDK-2207263 iCMS: Error: assert(_markBitMap.isMarked(addr + 1),"Missing Printezis bit?")
-
- Closed
-
- relates to
-
JDK-6692899 CMS: many vm.parallel_class_loading tests fail with assert "missing Printezis mark"
-
- Closed
-
-
JDK-7018302 newly added assert related to size of constantPoolOop causes secondary assertions or crashes
-
- Closed
-
-
JDK-6948538 CMS: BOT walkers can fall into object allocation and initialization cracks
-
- Closed
-